examples: renames showcase->nested; added vermont diaries
--HG--
branch : release 0.2

--- a/examples/nested3d/index.html
+++ b/examples/nested3d/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Simple Example</title>
-  <link rel="stylesheet" type="text/css" href="../../src/css/layerjs.css">
+  <link rel="stylesheet" type="text/css" href="layerjs.css">
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
   <style>
     @import url(https://fonts.googleapis.com/css?family=Oxygen:400);
@@ -236,7 +236,7 @@
     </div>
   </div>
 
-  <script src="../../dist/layerjs.js"></script>
+  <script src="layerjs.js"></script>
   <script>
     WL.init();
 
