--- a/examples/nested/index.html
+++ b/examples/nested/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Simple Example</title>
-  <link rel="stylesheet" type="text/css" href="../../src/css/layerjs.css">
+  <link rel="stylesheet" type="text/css" href="layerjs.css">
   <style>
   	@import url(https://fonts.googleapis.com/css?family=Oxygen:400);
 
@@ -150,7 +150,7 @@
     </div>
   </div>
 
-  <script src="../../dist/layerjs.js"></script>
+  <script src="layerjs.js"></script>
   <script>
     WL.init();
 
