examples: removing non-existing image types from example html

--- a/examples/nested/index.html
+++ b/examples/nested/index.html
@@ -126,22 +126,22 @@
               <div id="stage_images" data-wl-type="stage">
                 <div id="layer_image" data-wl-type="layer" data-wl-native-scroll="false" data-wl-default-frame="image2">
                   <div data-wl-type="frame" data-wl-name="image1" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image6" data-wl-neighbors.r="image2">
-                    <image data-wl-type="image" src="img/1.jpg" />
+                    <image src="img/1.jpg" />
                   </div>
                   <div data-wl-type="frame" data-wl-name="image2" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image1" data-wl-neighbors.r="image3">
-                    <image data-wl-type="image" src="img/2.jpg" />
+                    <image src="img/2.jpg" />
                   </div>
                   <div data-wl-type="frame" data-wl-name="image3" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image2" data-wl-neighbors.r="image4">
-                    <image data-wl-type="image" src="img/3.jpg" />
+                    <image src="img/3.jpg" />
                   </div>
                   <div data-wl-type="frame" data-wl-name="image4" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image3" data-wl-neighbors.r="image5">
-                    <image data-wl-type="image" src="img/4.jpg" />
+                    <image src="img/4.jpg" />
                   </div>
                   <div data-wl-type="frame" data-wl-name="image5" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image4" data-wl-neighbors.r="image6">
-                    <image data-wl-type="image" src="img/5.jpg" />
+                    <image src="img/5.jpg" />
                   </div>
                   <div data-wl-type="frame" data-wl-name="image6" data-wl-fit-to="cover" data-wl-no-scrolling="true" data-wl-start-position="center" data-wl-neighbors.l="image5" data-wl-neighbors.r="image1">
-                    <image data-wl-type="image" src="img/6.jpg" />
+                    <image src="img/6.jpg" />
                   </div>
                 </div>
               </div>
